--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,20 @@
-spring.application.name=home-automation
+spring.application.name=home_automation
 spring.datasource.url=jdbc:mysql://localhost:3306/home_automation
 spring.datasource.username=devuser
 spring.datasource.password=FrenKURoSanji186!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-# logging the sql
- spring.jpa.show-sql=true
-# for correct conversion to MySQL SQL
- spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# If you want to create the schema from scratch every time the application starts (useful in development):
+spring.jpa.hibernate.ddl-auto=create
+
+# If you want to update the schema without losing existing data (useful in development and testing):
+# spring.jpa.hibernate.ddl-auto=update
+
+# Initialization mode
+spring.datasource.initialization-mode=always
+
+# Log SQL queries
+spring.jpa.show-sql=true
+
+# Hibernate dialect for MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
