--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=home_automation
 spring.datasource.url=jdbc:mysql://localhost:3306/home_automation
-spring.datasource.username=devuser
-spring.datasource.password=FrenKURoSanji186!
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # If you want to create the schema from scratch every time the application starts (useful in development):
@@ -26,4 +26,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 # Hibernate dialect for MySQL
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
