changes in the Group And Rule Test classes. New Methods as well as refactoring of old methods. Yet still get java.lang.UnsupportedOperationException. Needs further refractoring. Mock up of Device Test Methods. I have decided that I  will solve and resolve the java.lang.UnsupportedOperationException after I have implemented and cleaned up all of the test class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # If you want to create the schema from scratch every time the application starts (useful in development):
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 #checking for discrepancies
 #spring.jpa.hibernate.ddl-auto=validate
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 # If you want to update the schema without losing existing data (useful in development and testing):
-# spring.jpa.hibernate.ddl-auto=update
+ spring.jpa.hibernate.ddl-auto=update
 
 # Initialization mode
 spring.datasource.initialization-mode=always
