--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,27 +4,4 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# If you want to create the schema from scratch every time the application starts (useful in development):
-#spring.jpa.hibernate.ddl-auto=create
-
-#checking for discrepancies
-#spring.jpa.hibernate.ddl-auto=validate
-
-#Testing Environment
-#spring.jpa.hibernate.ddl-auto=create-drop
-
-# If you want to update the schema without losing existing data (useful in development and testing):
- spring.jpa.hibernate.ddl-auto=update
-
-# Initialization mode
-spring.datasource.initialization-mode=always
-
-
-## Log SQL queries
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.properties.hibernate.use_sql_comments=true
-
-# Hibernate dialect for MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=none
