--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=home_automation
 spring.datasource.url=jdbc:mysql://localhost:3306/home_automation
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=devuser
+#  ${DB_USERNAME}
+spring.datasource.password=FrenKURoSanji186!
+#  ${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
