--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 g.springframework.web=DEBUG
 logging.level.org.springframework.web.HttpMediaTypeNotSupportedException=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.http.converter.json=DEBUG
+logging.level.com.fasterxml.jackson=DEBUG
 
