--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.http.converter.json=DEBUG
 logging.level.com.fasterxml.jackson=DEBUG
 
+spring.flyway.debug=true
+#spring.flyway.baseline-on-migrate=true
+
+logging.level.org.springframework.security=DEBUG
