finally made some progress on the authentication, enhancing and expanding testclasses. Working with a lot of high level applications, need to still get used to them and also fully understand the processes and what the cause-and-effects are

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=devuser
 spring.datasource.password=FrenKURoSanji186!
 #  ${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+jwt.secret.key=Gm5pT5V1rq9zlKHnS1dQxSTYtGxITkxzPxW5cQvVphI=
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
